--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ text_representation/*.bin
 text_representation/*.bin.gz
 text_representation/*.bin.gz.part
 text_representation/all_lang_output.csv
+*.csv
+*.libfm
+*.ffm
+*.output
+*libffm
